@@ -433,6 +433,12 @@ Q:lamestbot:You have to be kidding me
 Q:crush:In memory of Janet Pippin
 Q:cwush:In memory of Janet Pippin
 #
+# if JUPE_CHANNEL is defined you can also jupe a channel locally
+# i.e. no one on your server can join this channel.
+# You need the backslash to escape the # in the channel
+#
+Q:\#packet:I am tired of the packet fights for this channel
+#
 # X lines.
 # Used to match gecos fields and prohibit users or warn about users
 # who have matching strings in those fields from getting on the server.
