@@ -4,6 +4,10 @@
 
 version hybrid-6-b62   4-May-1999
 * Added ANTI_DRONE_FLOOD code	
+* Added Channel jupe code, Q line of form Q:\#channel:reason
+  jupes that channel locally only on this server.
+* '|' character in kline reason stops everything afterwards from being seen
+  by non opers.
 	
 version hybrid-6-b61   2-May-1999
 * fixed major bug in mtrie code. I lines would be treated as K lines
